Data visibility fixed

--- a/src/Data/index.css
+++ b/src/Data/index.css
@@ -56,3 +56,12 @@
 .data-icon{
     margin-right: 0.5rem;
 }
+
+.fade-in{
+    opacity: 1.0;
+}
+
+.fade-out{
+    opacity: 0.0;
+}
+
